<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >
    <include layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tool_id"
        android:layout_alignParentTop="true"
        />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        >
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_addcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pdlg_color_red"
        android:text="@string/add_smart_card"
        android:typeface="serif"
        android:layout_marginBottom="10dp"
        android:textColor="@color/pdlg_color_white"
        android:textAllCaps="false"/>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_viewcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/pdlg_color_green"
        android:textColor="@color/pdlg_color_white"
        android:layout_marginBottom="10dp"

        android:text="@string/view_smart_card"
        android:textAllCaps="false"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_viewcard_validity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/pdlg_color_blue"
            android:textColor="@color/pdlg_color_white"
            android:text="@string/check_smart_card_vaidity"
            android:textAllCaps="false"/>




    </LinearLayout>
</RelativeLayout>
