<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/border"
    android:gravity="center"
    android:layout_width="300dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/choose_search_type"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/accent_color" />
    <TextView
        android:id="@+id/btn_search_location"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_selector"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/location_wise_search"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:textStyle="bold"
        />
    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/or"/>
    <TextView
        android:id="@+id/btn_search_radius"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_selector"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/radius_wise_search"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:textStyle="bold"
       />
</LinearLayout>