<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tool_id"
        />

    <LinearLayout
        android:id="@+id/ln"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_id"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="15dp"
                android:text="@string/from"
                android:textColor="@android:color/black"
                android:textSize="14dp"
                android:id="@+id/myTextView" />

            <EditText
                android:id="@+id/spinner_source"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1.3"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:background="@drawable/rect_light"
                android:paddingLeft="8dp"
                android:hint="@string/select_start_station"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="16dp"
                android:text="@string/to"
                android:textColor="@android:color/black"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/spinner_destination"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1.3"
                android:focusableInTouchMode="false"
                android:background="@drawable/rect_light"
                android:paddingLeft="8dp"
                android:hint="@string/select_end_station"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="#ACACAC" />

        <TextView
            android:id="@+id/get_route"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/button_selector"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:text="@string/get_route"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent" />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/routelist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ln"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:padding="@dimen/item_offset"
        android:layout_marginTop="2dp">

    </android.support.v7.widget.RecyclerView>



</RelativeLayout>