<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search_based_on_radius"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />



    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/accent_color" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:text="@string/your_radius"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_radius"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.4"
            android:inputType="number"
            android:background="@drawable/border"
            android:drawableLeft="@mipmap/ic_location"
            android:hint="@string/enter_radius_in_km"
            android:padding="5dp"
            android:textSize="14sp" />


    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/bill_back_color"
        android:textStyle="bold"
        android:textSize="14sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/distance_radius_in_km"
        />
    <SeekBar
        android:id="@+id/simpleSeekBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="1"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="2"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="4"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="6"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="8"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="10"
            android:textColor="@color/green"
            android:textStyle="bold"
            android:textSize="18sp"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/btn_search_radius"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_selector"
            android:padding="10dp"
            android:text="@string/search"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_selector"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>