<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/select_your_timing"
            android:textSize="18sp"
            android:textColor="@color/text_black"
            android:textStyle="italic"
            android:layout_marginLeft="30dp"
            android:gravity="center"/>
        <ImageView
            android:id="@+id/cancleImg"
            android:layout_width="wrap_content"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_close"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"

        >
        <RadioGroup
            android:id="@+id/radiogrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
           >
            <RadioButton
                android:id="@+id/radioone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/now_onwards"
                android:textColorHint="@color/bill_back_color"
                android:text="@string/now_onwards"
                android:tag="1"
                android:textColor="@color/bill_back_color"
                android:textStyle="bold"/>
            <RadioButton

                android:id="@+id/radiotwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/whole_day_time"
                android:tag="0"
                android:textColorHint="@color/bill_back_color"
                android:textColor="@color/bill_back_color"
                android:textStyle="bold"/>

        </RadioGroup>
    </LinearLayout>

</LinearLayout>
