<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

          android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:text="@string/from"
            android:textColor="@android:color/black"
            android:textSize="14dp"
            android:id="@+id/myTextView" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spinner_source"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="2dp"
            android:paddingLeft="5dp"
            android:background="@drawable/rect_light"

            android:spinnerMode="dialog"
            android:visibility="visible"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ACACAC" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_gravity="center"
            android:layout_marginRight="20dp"
            android:text="@string/to"
            android:textColor="@android:color/black"
            android:textSize="14dp" />

        <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/spinner_destination"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="2dp"

            android:background="@drawable/rect_light"
android:paddingLeft="5dp"
            android:spinnerMode="dialog"
            android:visibility="visible"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#ACACAC" />

    <TextView
        android:id="@+id/get_fare"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/button_selector"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/get_fare"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent" />

</LinearLayout>
